--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -11,6 +11,7 @@
         <AssemblyName>SRXDScoreMod</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
+        <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -41,6 +42,9 @@
         <Reference Include="BepInEx, Version=5.4.17.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\BepInEx.dll</HintPath>
         </Reference>
+        <Reference Include="SpinModdingUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>Libs\SpinModdingUtilities.dll</HintPath>
+        </Reference>
         <Reference Include="SSD.Game, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\SSD.Game.dll</HintPath>
         </Reference>
@@ -54,6 +58,9 @@
         <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\UnityEngine.dll</HintPath>
         </Reference>
+        <Reference Include="UnityEngine.AnimationModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>Libs\UnityEngine.AnimationModule.dll</HintPath>
+        </Reference>
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\UnityEngine.CoreModule.dll</HintPath>
         </Reference>
@@ -65,11 +72,15 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
+        <Compile Include="BaseScoreSystemWrapper.cs" />
         <Compile Include="CompleteScreenUI.cs" />
+        <Compile Include="CustomScoreSystem.cs" />
         <Compile Include="Enums.cs" />
         <Compile Include="GameplayUI.cs" />
         <Compile Include="GameplayState.cs" />
+        <Compile Include="HighScoreInfo.cs" />
         <Compile Include="HighScoresContainer.cs" />
+        <Compile Include="IReadOnlyScoreSystem.cs" />
         <Compile Include="LevelSelectUI.cs" />
         <Compile Include="Main.cs" />
         <Compile Include="ModState.cs" />
@@ -77,6 +88,7 @@
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ScoreSystemProfile.cs" />
         <Compile Include="StringTable.cs" />
+        <Compile Include="ReflectionUtils.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
