--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -51,6 +51,9 @@
         <Reference Include="SSD.Types, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\SSD.Types.dll</HintPath>
         </Reference>
+        <Reference Include="SSD.Utility, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
+          <HintPath>Libs\SSD.Utility.dll</HintPath>
+        </Reference>
         <Reference Include="System" />
         <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\Unity.TextMeshPro.dll</HintPath>
@@ -84,6 +87,7 @@
         <Compile Include="LevelSelectUI.cs" />
         <Compile Include="Main.cs" />
         <Compile Include="ModState.cs" />
+        <Compile Include="PatternMatching.cs" />
         <Compile Include="ScoreContainer.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ScoreSystemProfile.cs" />
