--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -32,6 +32,9 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
+    <PropertyGroup>
+      <PostBuildEvent>copy /Y "C:\Users\domia\Git\SRXDScoreMod\bin\Release\SRXDScoreMod.dll" "C:\Program Files (x86)\Steam\steamapps\common\Spin Rhythm\BepInEx\plugins"</PostBuildEvent>
+    </PropertyGroup>
     <ItemGroup>
         <Reference Include="0Harmony, Version=2.4.2.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\0Harmony.dll</HintPath>
@@ -55,6 +58,9 @@
           <HintPath>Libs\SSD.Utility.dll</HintPath>
         </Reference>
         <Reference Include="System" />
+        <Reference Include="System.Reflection.Emit.ILGeneration, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+          <HintPath>..\..\..\..\Windows\Microsoft.NET\Framework64\v4.0.30319\System.Reflection.Emit.ILGeneration.dll</HintPath>
+        </Reference>
         <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\Unity.TextMeshPro.dll</HintPath>
         </Reference>
@@ -76,6 +82,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="BaseScoreSystemWrapper.cs" />
+        <Compile Include="CodeInstructionExtensions.cs" />
         <Compile Include="CompleteScreenUI.cs" />
         <Compile Include="CustomTimingAccuracy.cs" />
         <Compile Include="Enums.cs" />
