--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -82,8 +82,6 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="HighScoresContainer.cs" />
-        <Compile Include="Interfaces\IReadOnlyScoreSystem.cs" />
-        <Compile Include="Interfaces\IScoreSystem.cs" />
         <Compile Include="Old\ModState.cs" />
         <Compile Include="Old\ScoreContainer.cs" />
         <Compile Include="Old\ScoreSystemProfile.cs" />
@@ -94,9 +92,14 @@
         <Compile Include="ScoreMod.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="ScoreSystems\BaseScoreSystemWrapper.cs" />
+        <Compile Include="ScoreSystems\CustomScoreSystem.cs" />
+        <Compile Include="ScoreSystems\IReadOnlyScoreSystem.cs" />
+        <Compile Include="ScoreSystems\IScoreSystem.cs" />
         <Compile Include="Types\CustomTimingAccuracy.cs" />
         <Compile Include="Types\Enums.cs" />
         <Compile Include="Types\HighScoreInfo.cs" />
+        <Compile Include="Types\RankThreshold.cs" />
+        <Compile Include="Types\TimingWindow.cs" />
         <Compile Include="Utility\CodeInstructionExtensions.cs" />
         <Compile Include="Utility\ReflectionUtils.cs" />
         <Compile Include="Utility\StringTable.cs" />
