--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -82,8 +82,6 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="HighScoresContainer.cs" />
-        <Compile Include="Old\ModState.cs" />
-        <Compile Include="Old\ScoreContainer.cs" />
         <Compile Include="Old\ScoreSystemProfile.cs" />
         <Compile Include="Patches\CompleteScreenUI.cs" />
         <Compile Include="Patches\GameplayState.cs" />
@@ -99,6 +97,7 @@
         <Compile Include="Types\Enums.cs" />
         <Compile Include="Types\HighScoreInfo.cs" />
         <Compile Include="Types\RankThreshold.cs" />
+        <Compile Include="Types\SavedHighScoreInfo.cs" />
         <Compile Include="Types\TimingWindow.cs" />
         <Compile Include="Utility\CodeInstructionExtensions.cs" />
         <Compile Include="Utility\ReflectionUtils.cs" />
