--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -12,6 +12,7 @@
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <LangVersion>latest</LangVersion>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
     <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
         <PlatformTarget>AnyCPU</PlatformTarget>
@@ -82,7 +83,6 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="HighScoresContainer.cs" />
-        <Compile Include="Old\ScoreSystemProfile.cs" />
         <Compile Include="Patches\CompleteScreenUI.cs" />
         <Compile Include="Patches\GameplayState.cs" />
         <Compile Include="Patches\GameplayUI.cs" />
@@ -94,14 +94,16 @@
         <Compile Include="ScoreSystems\IReadOnlyScoreSystem.cs" />
         <Compile Include="ScoreSystems\IScoreSystem.cs" />
         <Compile Include="Types\CustomTimingAccuracy.cs" />
-        <Compile Include="Types\Enums.cs" />
         <Compile Include="Types\HighScoreInfo.cs" />
+        <Compile Include="Types\IHashable.cs" />
         <Compile Include="Types\RankThreshold.cs" />
         <Compile Include="Types\SavedHighScoreInfo.cs" />
+        <Compile Include="Types\ScoreSystemProfile.cs" />
         <Compile Include="Types\TimingWindow.cs" />
         <Compile Include="Utility\CodeInstructionExtensions.cs" />
         <Compile Include="Utility\ReflectionUtils.cs" />
         <Compile Include="Utility\StringTable.cs" />
+        <Compile Include="Utility\HashUtility.cs" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
