--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -89,8 +89,9 @@
         <Compile Include="Patches\GameplayState.cs" />
         <Compile Include="Patches\GameplayUI.cs" />
         <Compile Include="Patches\LevelSelectUI.cs" />
-        <Compile Include="ScoreMod.cs" />
+        <Compile Include="Plugin.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
+        <Compile Include="ScoreMod.cs" />
         <Compile Include="ScoreSystems\BaseScoreSystemWrapper.cs" />
         <Compile Include="ScoreSystems\CustomScoreSystem.cs" />
         <Compile Include="ScoreSystems\IScoreSystem.cs" />
