--- a/SRXDScoreMod.csproj
+++ b/SRXDScoreMod.csproj
@@ -47,9 +47,6 @@
         <Reference Include="BepInEx, Version=5.4.17.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\BepInEx.dll</HintPath>
         </Reference>
-        <Reference Include="SpinCore, Version=0.0.1.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>Libs\SpinCore.dll</HintPath>
-        </Reference>
         <Reference Include="SpinModdingUtilities, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\SpinModdingUtilities.dll</HintPath>
         </Reference>
@@ -74,6 +71,9 @@
         </Reference>
         <Reference Include="UnityEngine.CoreModule, Version=0.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\UnityEngine.CoreModule.dll</HintPath>
+        </Reference>
+        <Reference Include="UnityEngine.InputLegacyModule">
+          <HintPath>Libs\UnityEngine.InputLegacyModule.dll</HintPath>
         </Reference>
         <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
           <HintPath>Libs\UnityEngine.UI.dll</HintPath>
